src/objects/Checkoff_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AuditInfo__c</fullName>
        <label>AuditInfo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Checkoff__c</fullName>
        <label>Case Checkoff</label>
        <referenceTo>Case_Checkoff__c</referenceTo>
        <relationshipLabel>Checkoff Junctions</relationshipLabel>
        <relationshipName>Checkoff_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Checkoff Junctions</relationshipLabel>
        <relationshipName>Checkoff_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Involvement_Needed__c</fullName>
        <label>Involvement Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (Not Owner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <formula>LastModifiedBy.FirstName &amp;&quot; &quot; &amp; LastModifiedBy.LastName &amp; br() &amp;
 TEXT(DATEVALUE(LastModifiedDate)) &amp; br() &amp;
SUBSTITUTE(
TEXT(LastModifiedDate),
TEXT(DATEVALUE(LastModifiedDate)),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Close2__c</fullName>
        <label>Ready to Close2</label>
        <picklist>
            <controllingField>Involvement_Needed__c</controllingField>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_to_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Comments__c</fullName>
        <label>Work Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Checkoff Junction</label>
    <nameField>
        <displayFormat>CHK-{000000000}</displayFormat>
        <label>Checkoff Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkoff Junctions</pluralLabel>
    <recordTypes>
        <fullName>Sites</fullName>
        <active>true</active>
        <label>Sites</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>